[package]
name = "controller-prueba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
httparse = "1.8.0"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.2", features = ["client", "runtime"] }
prometheus-http-query = "0.8.2"
reqwest = "0.11.24"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
