[package]
name = "triton-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.2", features = ["client", "runtime"] }
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
