[package]
name = "triton-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.2"
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.2", features = ["client", "runtime"] }
log = "0.4.20"
rand = "0.8.5"
sysinfo = "0.30.7"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
uuid = "1.7.0"

rustacuda = { git = "https://github.com/jerry73204/RustaCUDA", branch = "fix-arm-build" }
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
serde = "1.0.197"
serde_json = "1.0.115"
prometheus-http-query = "0.8.3"
